<resources>
    <string name="app_name">Helper</string>
    <string name="nav_catalog_name">Каталог</string>
    <string name="nav_calc_name">Калькулятор</string>
    <string name="nav_notes_name">Заметки</string>
    <string name="nav_calendar_name">Календарь</string>
    <string name="nav_timer_name">Таймер</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>